Fix java >11 code